test/corpus/function.txt
================================================================================
Function Basic
================================================================================

foo()

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (call))

================================================================================
Function Args
================================================================================

foo("bar", "baz")

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (call
    (function_parameters
      (string)
      (string))))

================================================================================
Lambda Usage
================================================================================

each($inner) |$foo| { }

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (call
    (function_parameters
      (identifier))
    (lambda
      (parameter_list
        (parameter
          (identifier))))))

================================================================================
Lambda Usage - Type
================================================================================

each($inner) |String $foo| { }

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (call
    (function_parameters
      (identifier))
    (lambda
      (parameter_list
        (parameter
          (type
            (capital_identifier))
          (identifier))))))

================================================================================
Lambda Usage Type and Default
================================================================================

each($inner) |String $foo = "baz"| { }

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (call
    (function_parameters
      (identifier))
    (lambda
      (parameter_list
        (parameter
          (type
            (capital_identifier))
          (identifier)
          (default_param_value
            (string)))))))

================================================================================
Method Lambda
================================================================================

$foo.each(1) |$foo| { }

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (field
    (immediate_identifier))
  (call
    (function_parameters
      (integer))
    (lambda
      (parameter_list
        (parameter
          (identifier))))))

================================================================================
Method Lambda No Parens
================================================================================

$foo.each |$bar| { }

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (field
    (immediate_identifier))
  (call
    (lambda
      (parameter_list
        (parameter
          (identifier))))))

================================================================================
Method Lambda Chain No Parens
================================================================================

$foo.keys.each |$bar| { }

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (field
    (immediate_identifier))
  (field
    (immediate_identifier))
  (call
    (lambda
      (parameter_list
        (parameter
          (identifier))))))

================================================================================
Method Lambda Space
================================================================================

$foo . each |$bar| { }

--------------------------------------------------------------------------------

(source_file
  (identifier)
  (ERROR))
