test/corpus/identifiers.txt
================================================================================
Lower Identifier Test
================================================================================

profile::kerminator {

}

--------------------------------------------------------------------------------

(source_file
  (resource_declaration
    (identifier)))

================================================================================
Type Identifier Test
================================================================================

File['foo'] {

}

--------------------------------------------------------------------------------

(source_file
  (resource_declaration
    (type
      (capital_identifier)
      (index
        (string)))))
