test/corpus/keyword.txt
================================================================================
Include Basic
================================================================================

include foobar

--------------------------------------------------------------------------------

(source_file
  (include
    (identifier)))
