test/corpus/value.txt
================================================================================
Value Definitions - Chillin
================================================================================

$var

--------------------------------------------------------------------------------

(source_file
  (identifier))

================================================================================
Value Definitions - Chillin String Style
================================================================================

"what what"

--------------------------------------------------------------------------------

(source_file
  (string))

================================================================================
Value Definitions - Boolean
================================================================================

$var = true

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (bool)))

================================================================================
Value Definitions - String
================================================================================

$var = "foobar"

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (string)))

================================================================================
Value Definitions - Integer
================================================================================

$var = 100

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (integer)))

================================================================================
Value Definitions - Other
================================================================================

$var = $foo

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier)))

================================================================================
Value Definitions - Array
================================================================================

$var = ["foo"]

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (array
      (string))))

================================================================================
Value Definitions - Hash
================================================================================

$var = {"foo" => $bar}

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (hash
      (hash_pair
        (string)
        (identifier)))))

================================================================================
Value Definitions - Hash Comma
================================================================================

$var = {
    "foo" => $bar,
}

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (hash
      (hash_pair
        (string)
        (identifier)))))

================================================================================
Value Definitions - Regex
================================================================================

$var = /foo\n\//

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (regex)))

================================================================================
Value Definitions - Function
================================================================================

$var = foo("bar", "baz")

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier)
    (call
      (function_parameters
        (string)
        (string)))))

================================================================================
Value Definitions - Index
================================================================================

$var = $foo['a']['b']

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier)
    (index
      (string))
    (index
      (string))))

================================================================================
Value Definitions - ?
================================================================================

$var = $foo ? {
    'a' => 'b',
    $foo => $bar
}

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (question_switch
      (identifier)
      (hash
        (hash_pair
          (string)
          (string))
        (hash_pair
          (identifier)
          (identifier))))))

================================================================================
Inline Method
================================================================================

sudo::entry { 'kerminator':
  entry   => [
    '/bin/cp',
    ].join(' '),
}

--------------------------------------------------------------------------------

(source_file
  (resource_declaration
    (identifier)
    (resource_block
      (resource_config
        (string)
        (resource_attribute
          (identifier)
          (array
            (string))
          (field
            (immediate_identifier))
          (call
            (function_parameters
              (string))))))))

================================================================================
Assign Type
================================================================================

foo { "bar":
  baz => Bool,
  baz => String[1],
}

--------------------------------------------------------------------------------

(source_file
  (resource_declaration
    (identifier)
    (resource_block
      (resource_config
        (string)
        (resource_attribute
          (identifier)
          (type
            (capital_identifier)))
        (resource_attribute
          (identifier)
          (type
            (capital_identifier)
            (index
              (integer))))))))
